--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
     android:background="@android:color/holo_blue_light"
-    app:rightPadding="100dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:scrollbars="none"
+    app:leftPadding="100dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,9 +16,9 @@
         <include layout="@layout/view_menu" />
 
         <LinearLayout
-            android:background="@android:color/holo_orange_light"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@android:color/holo_orange_light">
 
             <Button
                 android:id="@+id/menu_toggle"
