--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <cn.evendy.iutil_lib.view.widget.MySlideMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/slideMenu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
     android:scrollbars="none"
-    app:leftPadding="100dp">
+    app:menuWidth="200dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
