--- a/app/src/main/res/layout/fragment_ormlite.xml
+++ b/app/src/main/res/layout/fragment_ormlite.xml
@@ -4,9 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/content"
+    <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </LinearLayout>
