--- a/iutil_lib/src/main/res/values/colors.xml
+++ b/iutil_lib/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="listpicker_pressed">#737373</color>
     <color name="dialog_divider">#ffbfcbd3</color>
     <color name="white">#ffffffff</color>
+
+    <color name="menu_circle">@android:color/white</color>
+
+    <color name="menu_bg_norm">@android:color/transparent</color>
+    <color name="menu_bg_press">@android:color/holo_orange_light</color>
+    <color name="menu_textColor">@android:color/holo_blue_light</color>
 </resources>
