--- a/app/src/main/res/layout/fragment_propertyanimation.xml
+++ b/app/src/main/res/layout/fragment_propertyanimation.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">
 
     <ImageView android:layout_width="wrap_content"
-        android:id="@+id/icon"
+        android:id="@+id/icon1"
         android:src="@mipmap/ic_launcher"
         android:layout_height="wrap_content" />
     <ImageView android:layout_width="wrap_content"
@@ -17,6 +17,16 @@
 
     <ImageView android:layout_width="wrap_content"
         android:id="@+id/icon3"
+        android:src="@mipmap/ic_launcher"
+        android:layout_height="wrap_content" />
+
+    <ImageView android:layout_width="wrap_content"
+        android:id="@+id/icon4"
+        android:src="@mipmap/ic_launcher"
+        android:layout_height="wrap_content" />
+
+    <ImageView android:layout_width="wrap_content"
+        android:id="@+id/icon5"
         android:src="@mipmap/ic_launcher"
         android:layout_height="wrap_content" />
 
