--- a/app/src/main/res/layout/ad_item.xml
+++ b/app/src/main/res/layout/ad_item.xml
@@ -7,14 +7,17 @@
 
     <ImageView
         android:id="@+id/item_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/tab_home" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/holo_blue_bright"
+        android:src="@mipmap/tuanlist_category_icon_dianying_high" />
 
     <TextView
         android:id="@+id/item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:gravity="center_horizontal"
         android:text="@string/tab_home"
         android:textColor="@color/tab_menu_text" />
